apps/ddns-updater/ddns-updater-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddns-updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddns-updater
  template:
    metadata:
      labels:
        app: ddns-updater
    spec:
      containers:
        - name: ddns-updater
          image: 127.0.0.1:32000/ddns-updater
          ports:
            - name: ddns-updater
              containerPort: 8000
          volumeMounts:
            - name: ddns-updater-secret
              subPath: config.json
              mountPath: /updater/data/config.json
      volumes:
        - name: ddns-updater-secret
          secret:
            secretName: ddns-updater-secret
