apps/ddns-updater/ddns-updater-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns-updater
spec:
  type: ClusterIP
  selector:
    app: ddns-updater
  ports:
    - name: ddns-updater
      port: 8000
      targetPort: 8000
