apps/ddns-updater/ddns-updater-ext-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ddns-updater-ext
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: external
    authentified: "true"
spec:
  tls:
    - hosts:
        - ddns.former-hostname.com
      secretName: ddns.former-hostname.com
  rules:
    - host: ddns.former-hostname.com
      http:
        paths:
          - backend:
              serviceName: ddns-updater
              servicePort: 8000
            path: /
