apps/ddns-updater/ddns-updater-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddns-updater-local

  labels:
    type: local
spec:
  rules:
    - host: ddns.local
      http:
        paths:
          - backend:
              service:
                name: ddns-updater
                port:
                  number: 8000
            path: /
            pathType: Prefix
